@@ -2,10 +2,12 @@ package me.pafias.pessentials.commands.modules;
 
 import me.pafias.pessentials.commands.ICommand;
 import me.pafias.pessentials.util.CC;
+import me.pafias.pessentials.util.RandomUtils;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 
+import java.util.Collections;
 import java.util.List;
 
 public class FlyCommand extends ICommand {
@@ -80,12 +82,8 @@ public class FlyCommand extends ICommand {
 
     @Override
     public List<String> tabHandler(CommandSender sender, Command command, String label, String[] args) {
-        if (args.length != 1) return List.of();
-
-        return plugin.getServer().getOnlinePlayers().stream()
-                .filter(p -> !(sender instanceof Player sp) || sp.canSee(p))
-                .map(Player::getName)
-                .filter(name -> name.toLowerCase().startsWith(args[0].toLowerCase()))
-                .toList();
+        if (args.length == 1)
+            return RandomUtils.tabCompletePlayers(sender, args[0]);
+        return Collections.emptyList();
     }
 }
